@startuml

title __IMPROVE's Class Diagram__\n

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.Circle {
          + draw()
          ~ Circle()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.GraphicEditor {
          + drawShape()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.Ocp {
          {static} + main()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.OtherGraphic {
          + OtherGraphic()
          + draw()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.Rectangle {
          + draw()
          ~ Rectangle()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      abstract class com.atguigu.principle.ocp.improve.Shape {
          ~ m_type : int
          {abstract} + draw()
      }
    }
  }
  

  namespace com.atguigu.principle.ocp {
    namespace improve {
      class com.atguigu.principle.ocp.improve.Triangle {
          + draw()
          ~ Triangle()
      }
    }
  }
  

  com.atguigu.principle.ocp.improve.Circle -up-|> com.atguigu.principle.ocp.improve.Shape
  com.atguigu.principle.ocp.improve.OtherGraphic -up-|> com.atguigu.principle.ocp.improve.Shape
  com.atguigu.principle.ocp.improve.Rectangle -up-|> com.atguigu.principle.ocp.improve.Shape
  com.atguigu.principle.ocp.improve.Triangle -up-|> com.atguigu.principle.ocp.improve.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
